# TRACER-BOARD

./: CMakeLists.txt  main.c
FreeRTOS-Kernel/: tasks.c
Inc/: dac.h  fonts.h  global_variables.h  screen.h  serial.h
Scr/: dac.c  global_variables.c  screen.c  serial.c
include/: FreeRTOSConfig.h
